--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,5 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule .*/webclient(.+) webclient$1 [QSA]
+RewriteCond %{REQUEST_URI} !.*/webclient
 RewriteRule ^ index.php [QSA,L]
