--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,6 @@
 RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
 RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteRule .*/webclient(.+) webclient$1 [QSA]
 RewriteCond %{REQUEST_URI} !.*/webclient.*
